Update security config